# hardcover-cli

./: .gitignore  .goreleaser.yaml  LICENSE  README.md  RELEASE.md  go.mod  go.sum  hardcover.py  install.sh  main.go  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/: add.go  completion.go  daily.go  export.go  goals.go  helpers.go  library.go  log.go  progress.go  root.go  search.go  setup.go  stats.go  whoami.go
internal/api/: client.go  client_test.go  queries.go  types.go
internal/config/: config.go  views.go  views_test.go
internal/errs/: errs.go
internal/filter/: filter.go  filter_test.go  lexer.go  parser.go
internal/ui/: edition_selector.go  exit.go  join.go  search_selector.go  selector.go  spinner.go  status_selector.go  style.go  tty.go
