[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcover-cli"
version = "0.1.0"
description = "Unofficial CLI for the Hardcover book tracking service"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "KIRKR101" },
]
dependencies = [
    "requests",
]

[project.scripts]
hardcover = "hardcover:main"

[tool.setuptools]
py-modules = ["hardcover"]
